# pingo

./: readme.md
src/: App.css  App.jsx
src-tauri/: Cargo.toml
src-tauri/src/: lib.rs
