[package]
name = "pingo"
version = "0.1.0"
description = "Pingo - P2P Desktop Messaging App"
authors = ["you"]
edition = "2021"

[lib]
name = "pingo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
